--- a/hw/hw-5.qmd
+++ b/hw/hw-5.qmd
@@ -37,6 +37,8 @@ Your plot should use at least two variables, but more is fine too.
     You will probably want to play around with theme options, colors, fonts, etc.
     The ultimate goal is the ugliest possible plot, and the sky is the limit!
 
+Your response must include two plots – the one with the default look and your "ugly" plot.
+
 ------------------------------------------------------------------------
 
 Use the following prompt for Questions 2-5.
@@ -54,33 +56,34 @@ You will want to take a peek at the next question, since the dataset you create 
 
 -   The code to create the data should go in the `data/data-create.R` file.
 
--   The dataset should be called `life_meaning` and saved as `life_meaning.csv` in the data folder.
+-   The dataset should be called `life_meaning` and saved as `life-meaning.csv` in the data folder.
 
 ## Question 3
 
 **The visualization.** Create an alternative visualization of these data.
-Accompany your visualization with a brief explanation of how you decided to create what you created, as well as how it is similar to and how it differs from the original visualization.
+Accompany your visualization with a brief explanation of how you decided to create what you did, as well as how it is similar to and how it differs from the original visualization.
 It’s OK if your visualization is such that all the conclusions that can be drawn from the original visualization can’t be drawn from yours (e.g., maybe fewer choices per country are displayed), but this should be something you articulate in your answer along with a justification with why you think it’s OK to omit this feature.
 Make sure that your visualization employs accessibility best practices we’ve discussed in class, and write a sentence about features you’ve decided to include/omit to meet these guidelines.
 The code to make the visualization should go in your Quarto file (as usual).
 
 ## Question 4
 
-**The app.** Create a Shiny app that features the visualization you made and at least one reactive element.
+**The app.** Create a Shiny app that features the visualization you made in the previous question and at least one reactive element.
 The reactivity can be as simple as selecting a country to highlight.
 Deploy the app to shinyapps.io.
 
 -   The code of the app should go in the `app1` folder.
 
--   The link to the deployed app should be included in your R Markdown folder.
+-   The link to the deployed app should be included in your Quarto document.
 
--   If you have a dataset you’ve created and placed in the `data` folder in the root of your project/repo, move that data file into the `app1/data` folder.
+-   Place a copy of the dataset you’ve created and placed in the `data` folder in the root of your project/repo in the `app1/data` folder.
     You need everything needed to run the app in the `app1` folder for deployment.
-    This creates multiple copies of the data in your repo, but that’s ok.
-    If you don’t have a dataset
+    This creates multiple copies of the data in your repo, but that’s OK.
 
--   Note: You’ve learned about Shiny in class, but we haven’t covered deployment, so completing this question will require a bit of self-learning.
-    See [this article on deployment](https://shiny.rstudio.com/articles/shinyapps.html) for instructions) for instructions for deployment to shinyapps.io, and ask questions if you need further guidance!
+::: callout-note
+You’ve learned about Shiny in class, but we haven’t covered deployment, so completing this question will require a bit of self-learning.
+See [this article on deployment](https://shiny.posit.co/r/articles/share/shinyapps/) for instructions) for instructions for deployment to shinyapps.io, and ask questions if you need further guidance!
+:::
 
 ## Question 5
 
@@ -90,4 +93,4 @@ Deploy the app to Shinyapps.io.
 
 -   The code of the app should go in the `app2` folder.
 
--   The link to the deployed app should be included in your R Markdown folder.
+-   The link to the deployed app should be included in your Quarto document.
