--- a/slides/18/18-shiny.qmd
+++ b/slides/18/18-shiny.qmd
@@ -139,7 +139,7 @@ knitr::include_app("https://minecr.shinyapps.io/manager-survey/", height ="550px
 ## Livecoding
 
 ::: task
-Go to the `ae-13` project and code along in `manager-survey/app-1.R`.
+Go to the `ae-13` project and code along in `app-1.R`.
 :::
 
 <br>
@@ -152,7 +152,7 @@ Highlights:
 ## Livecoding
 
 ::: task
-Go to the `ae-21` project and code along in `manager-survey/app-2.R`.
+Go to the `ae-21` project and code along in `app-2.R`.
 :::
 
 <br>
@@ -168,7 +168,7 @@ Highlights:
 ## Livecoding
 
 ::: task
-Go to the `ae-21` project and code along in `manager-survey/app-3.R`.
+Go to the `ae-13` project and code along in `app-3.R`.
 :::
 
 <br>
